# etherweasel

./: LICENSE.md  README.md
api-documentation/: EtherWeaselOpenAPI.yaml
backend/: README.md  testharness.sh
backend/dns_container/: Dockerfile  README.md  entrypoint.sh  run.sh
backend/dns_container/bind/: zones
backend/etherweasel_container/: README.md
backend/etherweasel_container/etherweasel/: Cargo.toml
backend/etherweasel_container/etherweasel/src/: dns_sniff.rs  hello.rs  main.rs
backend/etherweasel_py_container/: entrypoint.sh  run.sh
backend/etherweasel_py_container/src/: base_layer.py  udp_layer.py  video_layer.py
backend/etherweasel_py_container/src/attacks/: http_replace.py  video_loop.sh
backend/etherweasel_py_container/src/tests/: layer2.py  (+2 more)
backend/etherweasel_rs_container/: .dockerignore  Dockerfile  README.md  entrypoint.sh  install.sh  run.sh
backend/etherweasel_rs_container/etherweasel_rs/: .gitignore  Cargo.toml
backend/etherweasel_rs_container/etherweasel_rs/src/: dns_sniff.rs  driver.rs  hello.rs  main.rs
backend/etherweasel_rs_container/etherweasel_rs/src/attack/: attack.rs  dns.rs  sniff.rs
backend/etherweasel_rs_container/etherweasel_rs/src/driver/: docker_driver.rs  driver.rs  hardware_driver.rs  mock_driver.rs  mod.rs
backend/etherweasel_rs_container/etherweasel_rs/src/driver/tle8108em/: tle8108em.rs
backend/iperf_container/: run.sh
backend/iperf_container/shared/: results.json
backend/lens_container/src/: driver.py  ip_layer.py  tcp_layer.py  util.py
backend/server_container/: Dockerfile  README.md  entrypoint.sh  run.sh
backend/utils/: hostA.sh  hostB.sh  network.sh  synchronize.sh
electrical/: BOM.csv  README.md  switching_board.Cam  switching_board.SchDoc
frontend/: .env  Dockerfile  Dockerfile.development  Dockerfile.production  README.md  install.sh  package-lock.json  package.json  run.sh
frontend/public/: FinalRevisionMechanical.stl  index.html
frontend/src/: App.js  index.css  index.js
frontend/src/components/: AppBar.js  Breadcrumbs.js  Header.js  LineGraph.js  LoadingScreen.js  PieGraph.js  UnstyledLink.js
frontend/src/routes/: Analytics.js  Home.js
frontend/src/services/: EtherWeaselService.js  Formatter.js
frontend/tests/: general.spec.js
gui_container/: entrypoint.sh  run.sh
iperf_container/: entrypoint.sh
lens_container/: Dockerfile
lens_container/src/: ethernet_layer.py  http_layer.py  lens.py  link_layer.py  rtp_layer.py  shell.py
lens_container/src/attacks/: video_loop.py  video_loop.py:Zone.Identifier  video_record.py
lens_container/src/tests/: layer4.py
mechanical/: README.md  case.stl  insert.stl  lid.stl  lock_bottom.stl  lock_top.stl  model.f3d
results/: plot_real_world_throughputs.py  realworld.md
server_container/: Dockerfile
server_container/websites/: nginx.conf
software/: .gitignore  test.py
software/dns_container/: Dockerfile  entrypoint.sh  run.sh
software/dns_container/bind/: example.local.zone  zones
software/etherweasel_rs_container/: Dockerfile  README.md  run.sh  uninstall.sh
software/etherweasel_rs_container/etherweasel_rs/: Dockerfile
software/gui_container/: Dockerfile
software/iperf_container/: Dockerfile
software/server_container/: Dockerfile
software/utils/: bob.sh  network.sh
ui/: Dockerfile.raspi  Dockerfile.test  README.md  install.sh  package-lock.json  package.json  run.sh
ui/public/: manifest.json
ui/src/: App.js  index.js
ui/src/components/: .gitattributes
ui/src/services/: Formatter.js
ui/tests/: disconnected.spec.js
utils/: interface1.sh  interface2.sh
(+40 files in other folders)
