[package]
name = "etherweasel_rs"
version = "0.1.0"
edition = "2021"

[dependencies]
pcap = "0.11"
tower-http = { version = "0.3.4", features = ["cors"] }
dns-parser = "0.8.0"
pktparse = "0.7.1"
nom = "7.1.1"
spidev = "0.5.1"
rtnetlink = "0.11.0"
async-trait = "0.1.57"
futures = "0.3.24"
clap = { version = "4.0", features = ["derive"] }
# Tokio
tokio = { version = "1", features = ["full"] }
axum = { version = "0.5.16", features = ["macros"] }
tracing = "0.1.36"
tracing-subscriber = "0.3.15"
serde = { version = "1.0.138", features = ["derive"] }
# Extras
socket2 = "0.4.7"
bytes = "1"
sysinfo = "0.26.5"

# Cross compilation definition
[package.metadata.cross.target.aarch64-unknown-linux-gnu.zig]
enable= true
# Select a glibc version which is compatible with the 
# the Raspberry Pi OS 64-bit (Debian Bullseye). Find the
# version using
#   ldd --version
version = "2.31"  
[package.metadata.cross.target.aarch64-unknown-linux-gnu.dockerfile]
file = "./etherweasel_rs/Dockerfile"