[package]
name = "etherweasel_rs"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.57"
axum = { version = "0.5.16", features = ["macros"] }
clap = { version = "4.0", features = ["derive"] }
dashmap = "5.4.0"
dns-message-parser = "0.7.0"
erased-serde = "0.3.23"
futures = "0.3.24"
libc = "0.2.137"
nom = "7.1.1"
pcap = "0.11"
pnet = "0.31.0"
pnet_datalink = "0.31.0"
rtnetlink = "0.11.0"
spidev = "0.5.1"
sysinfo = "0.26.5"
serde = { version = "1.0.138", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.3.4", features = ["cors"] }
tracing = "0.1.36"
tracing-subscriber = "0.3.15"
uuid = { version = "1.2.1", features = ["v4", "serde"] }
append-only-vec = "0.1.2"

# Cross compilation definition
[package.metadata.cross.target.aarch64-unknown-linux-gnu.zig]
enable= true
# Select a glibc version which is compatible with the 
# the Raspberry Pi OS 64-bit (Debian Bullseye). Find the
# version using
#   ldd --version
version = "2.31"  
[package.metadata.cross.target.aarch64-unknown-linux-gnu.dockerfile]
file = "./etherweasel_rs/Dockerfile"